clusters/build-clusters/02_cluster/openshift-monitoring/openshift-monitoring-build02_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openshift-monitoring-build02
  namespace: openshift-monitoring
spec:
  tls:
    - secretName: openshift-monitoring-build02-tls
      hosts:
        - monitoring.build02.ci.openshift.org
  rules:
    - host: monitoring.build02.ci.openshift.org
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
